# generic-floyd-warshall

./: .editorconfig  Cargo.toml  README.md
src/: lib.rs
