[package]
name = "generic-floyd-warshall"
description = "A generic implementation of the Floyd-Warshall algorithm for array-like types in the standard library."
version = "0.1.0"
authors = ["Joseph R. Quinn <423821+quinnjr@users.noreply.github.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
keywords = ["floyd", "warshall", "informatics", "matrix"]
categories = ["algorithms", "graphics", "science"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
